tests/docker/proxy/front-proxy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/alerta/ui0"
                route:
                  prefix_rewrite: "/"
                  cluster: web0
              - match:
                  prefix: "/alerta/ui1"
                route:
                  prefix_rewrite: "/"
                  cluster: web1
              - match:
                  prefix: "/alerta/ui2"
                route:
                  prefix_rewrite: "/"
                  cluster: web2
              - match:
                  prefix: "/alerta/api"
                route:
                  prefix_rewrite: "/api"
                  cluster: api
          http_filters:
          - name: envoy.router
            typed_config: {}
  clusters:
  - name: web0
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
      - socket_address:
          address: web0
          port_value: 80
  - name: web1
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
      - socket_address:
          address: web1
          port_value: 80
  - name: web2
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
      - socket_address:
          address: web2
          port_value: 80
  - name: api
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
      - socket_address:
          address: api
          port_value: 8080
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
